# wbml

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  todo.tasks
.github/workflows/: ci.yml
data/air_temp/: fetch.sh
data/eeg/: fetch.sh
data/exchange/: fetch.sh
data/mauna_loa/: fetch.sh
data/miso/: fetch.sh
doc/: conf.py  readme.rst
doc/source/: wbml.core.rst  wbml.random.rst  wbml.util.rst  wbml.vi.rst
docs/: Makefile  api.rst
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: readme.rst.txt
docs/_build/html/source/: wbml.data.air_temp.html  (+9 more)
results/: smoothing.csv  smoothing_independent_lbfgs.csv
scripts/: bnn_quadratic.py  brnn_sin.py  climate.py  climate_independent_gps.py  mcc.py  mcc_plot.py  nn_quadratic.py  rnn_sin.py  vanilla_climate_experiment.zsh  vanilla_climate_experiment_idp.zsh  vi_fa.py
tests/: __init__.py  lmm.py  test_data.py  test_gpar.py  test_lmm.py  test_metric.py  test_net.py  test_out.py  test_util.py  test_vi.py  test_warning.py  util.py
wbml/: __init__.py  data.py  experiment.py  lmm.py  lr.py  metric.py  net.py  out.py  parser.py  plot.py  random.py  util.py  vi.py  warning.py
wbml/data/: __init__.py  air_temp.py  climate.py  cmip5.py  crude_oil.py  data.py  eeg.py  exchange.py  jura.py  kemar.py  mauna_loa.py  mf_temp.py  miso.py  predprey.py  snp.py  station.py  stratis.py  toy_sines.py  vix.py
(+17 files in other folders)
