[metadata]
name = wbml
version = 0.1.3
author = Wessel Bruinsma
author_email = wessel.p.bruinsma@gmail.com
description = Machine learning stuff
url = https://github.com/wesselb/wbml
license = MIT
license_file = LICENCE.txt
long_description = file: README.md
long_description_content_type = text/markdown
